# redfish-schema-browser-rs

./: .editorconfig  .gitignore  .lefthook.yml  .prettierignore  README.md  biome.json  index.css  index.html  index.js  package-lock.json  package.json  tsconfig.json
.devcontainer/: Dockerfile  devcontainer.json  on-create.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
src/: index.css  index.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
