[package]
name = "app"
version = "0.2.0"
authors = ["9506hqwy"]
edition = "2021"
rust-version = "1.83"
repository = "https://github.com/9506hqwy/redfish-schema-browser-rs"
license = "MIT OR Apache-2.0"
keywords = ["redfish"]
categories = ["development-tools"]
default-run = "app"

[build-dependencies]
tauri-build = { version = "1.5.5", features = [] }

[dependencies]
once_cell = "1.20.3"
regex = "1.11.1"
serde_json = "1.0.139"
serde = { version = "1.0.218", features = ["derive"] }
tauri = { version = "1.8.2", features = ["cli", "dialog-open"] }
url = "2.5.4"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]

[profile.release]
strip = "symbols"
lto = true
