[package]
name = "app"
version = "0.2.0"
authors = ["9506hqwy"]
# https://github.com/tauri-apps/tauri/issues/10412
edition = "2021"
rust-version = "1.85"
repository = "https://github.com/9506hqwy/redfish-schema-browser-rs"
license = "MIT OR Apache-2.0"
keywords = ["redfish"]
categories = ["development-tools"]
default-run = "app"

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
once_cell = "1.20.3"
regex = "1.11.2"
serde_json = "1.0.145"
serde = { version = "1.0.226", features = ["derive"] }
tauri = { version = "2.8.5", features = [] }
tauri-plugin-cli = "2.4.0"
tauri-plugin-dialog = "2.4.0"
url = "2.5.7"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
strip = "symbols"
lto = true
