[package]
name = "redfish-schema-browser-rs"
version = "0.2.0"
authors = ["9506hqwy"]
# https://github.com/tauri-apps/tauri/issues/10412
edition = "2021"
rust-version = "1.85"
repository = "https://github.com/9506hqwy/redfish-schema-browser-rs"
license = "MIT OR Apache-2.0"
keywords = ["redfish"]
categories = ["development-tools"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
once_cell = "1.21.3"
regex = "1.12.3"
serde_json = "1.0.149"
serde = { version = "1.0.228", features = ["derive"] }
tauri = { version = "2.9.5", features = [] }
tauri-plugin-cli = "2.4.1"
tauri-plugin-dialog = "2.6.0"
url = "2.5.8"

[profile.release]
strip = "symbols"
lto = true
